[metadata]
description-file=README.txt
license_files=LICENSE.txt
name = AAM
version = 0.0.1
author = Andreas Bigom, Michael Harborg, Oliver Elmgren & Marcus Presutti
author_email = andreasbigom@gmail.com
description = Module for performing various archetypal analyses
long_description = file: README.txt
long_description_content_type = text/markdown
url = https://github.com/gmyrianthous/example-publish-pypi
project_urls =
    repository = https://github.com/gmyrianthous/example-publish-pypi
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10.2

[options.packages.find]
where = src